# ecommerce-api/openapi.json
@@ -1410,6 +1410,10 @@
             "type": "object",
             "nullable": true
           },
+          "taxCents": {
+            "type": "number",
+            "nullable": true
+          },
           "totalCents": {
             "type": "number",
             "nullable": true
@@ -1446,6 +1450,7 @@
           "stripeSessionId",
           "stripePaymentIntentId",
           "shippingAddress",
+          "taxCents",
           "totalCents",
           "items",
           "id",
